@@ -1,5 +1,5 @@
 # 1. First build we build this app.
-FROM adoptopenjdk:8-jdk-hotspot as BUILDER
+FROM adoptopenjdk:11-jdk-hotspot as BUILDER
 RUN mkdir /build
 ADD . /build
 WORKDIR /build
@@ -10,11 +10,13 @@ RUN ./mvnw -B clean package
 # and the artifact is available in /build/target.
 
 # 2. We build the target image, containing the app artifact.
-FROM adoptopenjdk:8-jre-hotspot
+FROM adoptopenjdk:11-jre-hotspot
 # We don't want to run this app as root, so let's create a new user.
 RUN useradd -m -s /bin/bash app
 USER app
 # Copy the app artifact from the previous run.
 COPY --from=BUILDER /build/target/spring-on-k8s.jar /home/app
-# Let the JVM know we are running in a containerized environment.
-ENTRYPOINT [ "java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "/home/app/spring-on-k8s.jar" ]
+# Since this container is using Java 11+, you don't need to add extra args:
+# '+UseContainerSupport' is enabled by default to automatically tune JVM memory
+# settings according to container memory resources.
+ENTRYPOINT [ "java", "-jar", "/home/app/spring-on-k8s.jar" ]
